# notesx-backend

./: Cargo.toml
src/: lib.rs  main.rs
src/app/: main.rs
src/auth/: mod.rs
src/auth/common/: auth_repository.rs
src/auth/data/cloud/: mongo_database.rs
src/auth/data/entities/: sign_up_data.rs
src/auth/data/entities/hashing/: salted_hash.rs
src/auth/data/entities/sign_up/: sign_up_cloud_data.rs  sign_up_request_data.rs  sign_up_response_data.rs
src/auth/data/entities/token/: token_claim.rs  token_config.rs
src/auth/data/repository/: auth_repository_impl.rs
src/auth/data/security/hashing/: hashing_service_impl.rs
src/auth/data/security/token/: token_service_impl.rs
src/auth/data/validation/: auth_validation_data_repository_impl.rs
src/auth/domain/repository/: auth_repository.rs
src/auth/domain/routes/: sign_up_route.rs
src/auth/domain/security/hashing/: hashing_service.rs
src/auth/domain/security/token/: token_service.rs
src/auth/domain/usecases/: sign_up_use_case.rs
src/auth/domain/validation/: auth_validation_data_repository.rs
src/auth/signup/route/: sign_up_route.rs
src/core/: mongo_repo.rs
