[package]
name = "notesx-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
async-std = "1.12.0"
regex = "1.8.4"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
rand = "0.8.5"
sha2 = "0.10.6"
chrono = "0.4.26"
hex = "0.4.3"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]

[[bin]]
name = "main"
path = "src/main.rs"